<resources>
    <string name="app_name">Kaera</string>
    <string name="main_backpress">\'뒤로\'버튼을 한번더 누르면 종료됩니다.</string>
    <string name="save">저장</string>
    <!-- 에러 화면 -->
    <string name="error_network">네트워크 오류</string>
    <string name="error_network_guide">인터넷 연결 후 다시 시도해주세요</string>
    <string name="refresh">새로고침하기</string>
    <string name="instagram">인스타그램</string>
    <!-- 로그인 화면 -->
    <string name="login_sub_title">나의 고민을 빛나는 보석으로</string>
    <string name="login_kakao_button">카카오 로그인</string>
    <!-- 고민작성화면 -->
    <string name="write_deadline_title">이 고민, 언제까지 끝낼까요?</string>
    <string name="write_this">이 고민을</string>
    <string name="write_deadline">일 후까지 끝낼게요</string>
    <string name="write_complete">작성 완료하기</string>
    <string name="write_no_deadline"><u>기간 없이 고민 하기</u></string>
    <string name="write">고민작성</string>
    <string name="complete">완료</string>
    <string name="write_choice">고민 템플릿을 선택해주세요</string>
    <string name="write_nameing">고민에 이름을 붙여주세요</string>
    <string name="write_naming_hint">7글자 내로 고민의 이름을 붙여주세요</string>
    <string name="write_freeflow_title">고민의 내용을 자유롭게 작성해보세요</string>
    <string name="write_content">고민 내용 작성하기</string>
    <string name="write_empty">선택된 템플릿이 없어요!</string>
    <string name="write_empty_induction">고민 내용 작성하기</string>
    <string name="write_choice_induction">상단에서 템플릿을 골라볼까요?</string>

    <string name="write_snackbar_title"><![CDATA[고민의 <font color=\'#FF5F5F\'>제목</font>을 붙여주세요!]]></string>
    <string name="write_snackbar_content">내용이 전부 작성되지 않았어요!</string>
    <string name="write_title_count">%d/7</string>
    <string name="write_thanksto">Thanks To %s</string>

    <string name="detail_edit">수정하기</string>
    <string name="detail_deadline_edit">데드라인 수정하기</string>
    <string name="detail_delete">삭제하기</string>
    <string name="detail_cancel">취소</string>
    <string name="detail_warning">수정이 불가능하니 잘 확인해서 입력해주세요</string>
    <string name="detail_before_date">고민 캐기</string>
    <string name="detail_before_complete_button">🔨 고민 보석 캐기</string>

    <string name="complete_write_snackbar">작성 완료!</string>
    <string name="complete_edit_snackbar">수정 완료!</string>

    <string name="complete_tilte">이 고민, 어떻게 캐낼까요?</string>
    <string name="complete_subtitle">고민 끝에 결정한 나의 생각을 적어주세요!</string>
    <string name="complete_hint">80자 이내로 적어주세요.</string>
    <string name="saying_shining">이 고민을 통해 더욱 빛나기를!</string>
    <string name="instagram_first">🎉 처음 캔 보석이에요 🎉</string>
    <string name="instagram_share_induction">친구들에게 처음 캐낸 내 고민 보석을 공유해보세요!</string>
    <string name="instagram_share_button">인스타 스토리 공유하기</string>

    <string name="dialog_record"><![CDATA[기록을 <font color=\'#FF5F5F\'>취소</font> 하시나요?]]></string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_sure">하시나요?</string>
    <string name="dialog_record_warning">지금 나가실건가요?</string>
    <string name="dialog_backpress_warning">화면을 나가면 작성중인 내용이 사라져요</string>

    <string name="dialog_before_delete_title"><![CDATA[작성하신 고민을 정말 <font color=\'#ff0000\'>삭제</font>하시겠어요?]]></string>
    <string name="dialog_before_delete_subtitle">내가 했던 고민의 과정이 사라지게 돼요😢</string>
    <string name="dialog_after_delete_title"><![CDATA[고민을 <font color=\'#ff0000\'>삭제</font> 하시나요?]]></string>
    <string name="dialog_after_delete_subtitle">삭제된 고민은 복구할 수 없어요</string>
    <string name="dialog_delete_confirm">삭제</string>
    <string name="dialog_write_success">작성 완료!</string>
    <string name="dialog_write_action_change">템플릿이 변경되면 작성 중인 내용이 사라집니다.</string>
    <string name="dialog_edit_action_change"><![CDATA[지금 템플릿이 변경되면 <font color=\'#ff0000\'>새로운</font> 고민이 작성됩니다.]]></string>
    <string name="dialog_write_change_subtitle">변경하시겠어요?</string>

    <string name="dialog_app_essential_update">필수 업데이트가 있습니다\n 업데이트 이후 사용해주세요</string>
    <string name="dialog_app_felxible_update">원활한 사용을 위해 업데이트를 진행해주세요</string>

    <!--  보관함  -->
    <string name="storage_title">고민 보석함</string>
    <string name="storage_templete">모든 보석 보기</string>
    <string name="storage_empty">아직 끝낸 고민이 없어요</string>
    <string name="storage_empty_induction">작성된 고민 원석을\n빛나는 보석으로 만들어주세요.</string>
    <string name="storage_empty_mining_button">고민 보석 캐기</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>
    <string name="storage_introduce">그동안 캐낸 모든 보석을 볼 수 있어요</string>
    <string name="storage_jewels_num">총 %d개</string>
    <string name="storage_template_title">모든 보석 보기</string>
    <string name="storage_template_info">그동안 캐낸 모든 보석을 볼 수 있어요</string>


    <!--  고민 작성지  -->
    <string name="worry_template_title">고민 템플릿</string>
    <string name="worry_template_to_write">작성하러가기</string>

    <!-- 홈화면 : 원석 뷰 -->
    <string name="home_stone_label">열심히 캐내는 중 ⛏</string>
    <string name="home_stone_empty_title">아직 고민 원석이 없네요!</string>
    <string name="home_stone_empty_content">+ 버튼을 클릭해 고민을 작성해보세요.</string>
    <string name="home_stone_full_title">고민 원석이 가득찼어요!</string>
    <string name="home_stone_full_content">너무 많은 고민은 머릿 속을 어지럽혀요\n 다른 고민들을 끝낸 다음, 새 원석을 생성할 수 있어요</string>
    <string name="home_stone_full_button">알겠어요!</string>

    <!-- 홈화면 : 보석 뷰 -->
    <string name="home_jewel_label">그동안 캐낸 보석들 ✨</string>
    <string name="home_jewel_empty_title">아직 고민 보석이 없네요!</string>
    <string name="home_jewel_empty_content">원석을 터치해 고민 보석을 캐내보세요.</string>

    <string name="detail_before_createdat">작성일 %s</string>
    <!--  고민 상세페이지: 해결 후  -->

    <string name="detail_after_title">나의 고민</string>
    <string name="detail_worry_date">고민 기간</string>
    <string name="detail_after_answer">내가 내린 답은</string>
    <string name="detail_after_record">이 고민 이후 나의 기록</string>
    <string name="detail_after_record_hint">이 고민을 통해 배운점 또는 생각을 자유롭게 적어보세요</string>

    <!--  마이페이지  -->
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_alert_setting">알림설정</string>
    <string name="mypage_push_alert">Push 알림</string>
    <string name="mypage_noti_allow">권한 허용</string>
    <string name="mypage_tos">이용 약관</string>
    <string name="mypage_info">정보</string>
    <string name="mypage_kaera_guide">캐라 사용설명서</string>
    <string name="mypage_tos_service">서비스 이용 약관</string>
    <string name="mypage_tos_privacy">개인정보 처리방침</string>
    <string name="mypage_open_source">오픈소스 라이선스</string>
    <string name="logout">로그아웃</string>
    <string name="sign_out"><![CDATA[<u>계정 탈퇴</u>]]></string>
    <string name="sign_out_yes">탈퇴</string>
    <string name="logout_warning_title">로그아웃 하시겠어요?</string>
    <string name="logout_warning_content">고민 원석과 보석은 저장되고 있어요</string>
    <string name="sign_out_warning_title"><![CDATA[정말로 <font color=\'#ff0000\'>탈퇴</font>하실 건가요?]]></string>
    <string name="sign_out_warning_content">탈퇴 후 내용은 복구가 불가능해요</string>

    <!--  온보딩  -->
    <string name="next">다음</string>
    <string name="start">시작하기</string>
    <string name="first_title_top">캐라에서는 고민을 기록하며</string>
    <string name="first_title_bottom">진정한 나를 찾을 수 있어요</string>
    <string name="second_title_top">캐라 템플릿에 맞춰</string>
    <string name="second_title_bottom">복잡한 생각을 정리해보세요</string>
    <string name="third_title_top">과거의 고민 원석을</string>
    <string name="third_title_bottom">미래의 빛나는 보석으로 캐내보세요!</string>

    <!-- 고민 템플릿 -->
    <string name="template_banner_title">캐라 인스타그램에서 다른\n고민 여정을 살펴보세요!</string>
    <string name="template_banner_button">공유하기</string>
    <string name="template_go_write_button">작성하러 가기</string>

    <!-- action flag -->
    <string name="af_write">write</string>
    <string name="af_edit">edit</string>

</resources>