<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.Html" />

        <variable
            name="title"
            type="String" />

        <variable
            name="subtitle"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect_gray2_12">

        <ImageView
            android:id="@+id/iv_warnlight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/icn_warningrt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_surecancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@{Html.fromHtml(title)}"
            android:textAppearance="@style/h_body3_b14"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_warnlight"
            tools:text="@string/dialog_after_delete_title" />

        <TextView
            android:id="@+id/tv_savewraning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{subtitle}"
            android:textAppearance="@style/h_sub1_r12"
            android:textColor="@color/gray_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_surecancel"
            tools:text="@string/dialog_after_delete_subtitle" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            app:constraint_referenced_ids="btn_no,btn_yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_savewraning" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_rect_gray3_8"
            android:text="@string/dialog_cancel"
            android:textAppearance="@style/h_body3_b14"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_rect_gray3_8"
            android:text="@string/dialog_delete_confirm"
            android:textAppearance="@style/h_body3_b14"
            android:textColor="@color/red" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>