<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect_gray3_15">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/detail_edit"
            android:textAlignment="center"
            android:textAppearance="@style/h_body1_b16"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shape_rect_gray2_0"
            app:layout_constraintTop_toBottomOf="@id/tv_edit" />

        <TextView
            android:id="@+id/tv_deadline_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/detail_deadline_edit"
            android:textAlignment="center"
            android:textAppearance="@style/h_body1_b16"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shape_rect_gray2_0"
            app:layout_constraintTop_toBottomOf="@id/tv_deadline_edit" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/detail_delete"
            android:textAlignment="center"
            android:textAppearance="@style/h_body1_b16"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shape_rect_gray2_0"
            app:layout_constraintTop_toBottomOf="@id/tv_delete" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/detail_cancel"
            android:textAlignment="center"
            android:textAppearance="@style/h_body1_b16"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>