<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_network"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_1"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/error_network_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_network"
            android:textAppearance="@style/h_body2_r16"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/error_network_guide"
            android:textAppearance="@style/h_body4_r14"
            android:textColor="@color/gray_4"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_network_error"
            android:layout_width="180dp"
            android:layout_height="36dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ripple_rect_gray1_stroke_gray4_30"
            android:paddingVertical="0dp"
            android:text="@string/refresh"
            android:textColor="@color/gray_4"
            app:layout_constraintEnd_toEndOf="@+id/tv_guide"
            app:layout_constraintStart_toStartOf="@+id/tv_guide"
            app:layout_constraintTop_toBottomOf="@+id/tv_guide" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>