<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="title"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect_gray2_12">

        <ImageView
            android:id="@+id/iv_warnlight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/icn_warningrt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@{title}"
            android:textAppearance="@style/h_body3_b14"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_warnlight"
            tools:text="@string/dialog_app_essential_update" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            app:constraint_referenced_ids="btn_yes,btn_no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_update" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect_gray3_8"
            android:text="@string/yes"
            android:textAppearance="@style/h_body3_b14"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect_gray3_8"
            android:text="@string/no"
            android:textAppearance="@style/h_body3_b14"
            android:textColor="@color/red" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>