<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect_gray2_8">

        <ImageView
            android:id="@+id/iv_axe"
            android:layout_width="78dp"
            android:layout_height="89dp"
            android:layout_marginTop="29dp"
            android:src="@drawable/stone_full"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/home_stone_full_title"
            android:textAppearance="@style/h_head3_b18"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_axe" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/home_stone_full_content"
            android:textAppearance="@style/h_sub1_r12_wide"
            android:textColor="@color/gray_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_complete"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_rect_yellow1_10"
            android:paddingHorizontal="19dp"
            android:text="@string/home_stone_full_button"
            android:textAppearance="@style/h_body3_b14"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>