<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <!-- TODO  배경 바꾸기 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect_gray2_8">

        <ImageView
            android:id="@+id/iv_jewel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:src="@drawable/gem_red_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/instagram_first"
            android:textAppearance="@style/h_head3_b18"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_jewel" />

        <TextView
            android:id="@+id/tv_share_induction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="43dp"
            android:text="@string/instagram_share_induction"
            android:textAlignment="center"
            android:textAppearance="@style/h_body4_r14"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_complete"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="73dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/selector_rect_gray4_yellow1_10"
            android:padding="0dp"
            android:text="@string/instagram_share_button"
            android:textAppearance="@style/h_body4_r14"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_share_induction" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>